fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-  overflow-x: hidden;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,7 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   /* our css */
-
   overflow-x: hidden;
 }
 
